Refactor logging to Application Insights telemetry in various services
- Integrated Application Insights TelemetryClient into OtpService, TransactionService, RedisService, TaskService, ServiceTokenService, TokenService, and UserService.
- Replaced existing logging statements with telemetry tracking for better observability.
- Removed or commented out debug logs to improve performance and reduce noise in logs.
- Enhanced error handling by tracking exceptions with telemetry.
- Updated trace messages to include relevant properties for better context in telemetry data.